segundo cambio, agregar footer y nav

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
 <body>
     <h1>esto es una prueba para git</h1>
 
+    <nav>
+        <ul>
+            <li>primero</li>
+        </ul>
+        <ul>
+            <li>segundo</li>
+        </ul>
+    </nav>
+
     <section>
         <div>
             <p>hola, este es el primer parrafo</p>
         </div>
     </section>
+
+    <footer>
+        Este contenido tiene licencia Creative Commons
+    </footer>
 </body>
 </html>
