cambios que no queria hacer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>esto es una prueba para git</h1>
 
+    <div>
+        <p>cambios que no quiero hacer</p>
+    </div>
+
     <nav>
         <ul>
             <li>primero</li>
