--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba para git</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>esto es una prueba para git</h1>
+
+    <header>
+        <img src="img/banner-sitio-web-small.jpg" alt="">
+        <h1>esto es una prueba para git</h1>
+
+    </header>
 
     <div>
         <p>cambios que no quiero hacer</p>
