--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
     </header>
 
-    <div>
-        <p>cambios que no quiero hacer</p>
-    </div>
+    <img src="img/nueva-version_9f363cfa-19b8-46fa-b494-eb06ed40d34b.webp" alt="">
 
     <nav>
         <ul>
