--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     </header>
 
-    <img src="img/invie-responsive_9eaee446-2d8d-4cfb-92e1-c4038311af4a.webp" alt="">
+    <img id="responsive" src="img/invie-responsive_9eaee446-2d8d-4cfb-92e1-c4038311af4a.webp" alt="">
 
     <nav>
         <ul>
