--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <img id="responsive" src="img/invie-responsive_9eaee446-2d8d-4cfb-92e1-c4038311af4a.webp" alt="">
-
+    <img src="img/nueva-version_9f363cfa-19b8-46fa-b494-eb06ed40d34b.webp" alt="">
     <nav>
         <ul>
             <li>primero</li>
