--- a/precios.html
+++ b/precios.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/invie.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   </head>
   <body class="precios">
@@ -70,6 +71,40 @@
           </tbody>
         </table>
       </div>
+    </section>
+   <section>
+        <div class = "contenedor">
+          <div class="alert alert-success" role="alert">
+            <h1 class="alert-heading">Cotiza Tu Guitarra Ya!!</h1>
+          </div>
+        </div>
+      </section>
+    <section class ="tabla">
+      <div class ="contenedor">
+      <form>
+        <div class="form-group">
+          <label for="text">Tiempo de Pago (Meses)</label>
+          <input type="number" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="text">Modelo: </label>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+            <label class="form-check-label" for="inlineCheckbox1">1</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+            <label class="form-check-label" for="inlineCheckbox2">2</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">3</label>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Cotizar</button>
+        
+      </form>
+    </div>
     </section>
     <footer class="footer">
       <div class="contenedor">
